--- a/css/hermes.css
+++ b/css/hermes.css
@@ -2,6 +2,7 @@
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Open+Sans&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Dosis&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fira+Code&display=swap");
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
@@ -444,7 +445,7 @@ code,
 pre {
   font-size: 0.8em;
   background-color: #f8f8f8;
-  font-family: "Roboto Mono", Monaco, courier, monospace;
+  font-family: "Fira Code", "Roboto Mono", Monaco, courier, monospace;
 }
 .highlight {
   position: relative;
